--- a/SylentByte/package.json
+++ b/SylentByte/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "chart.js": "^4.5.1",
+    "gsap": "^3.13.0",
+    "leaflet": "^1.9.4",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17"
   },
